--- a/app/views/pages/p_praxis.html.erb
+++ b/app/views/pages/p_praxis.html.erb
@@ -14,16 +14,14 @@
 
         <h1 class="praxis">Edition Criteria for Padua</h1>
 
-        <p class="notice">This page is currently under revision.</p>
-<!--
         <h2 class="praxis">&#10081; 1. Introduction</h2>
 
         <p class="praxis">In establishing the following editorial norms, I have used both readability and fidelity to manuscript as guiding principles. I have derived my editorial norms from the pioneering efforts of Günter Holtus in his edition of the Franco-Italian <em>Bataille d'Aliscans</em>, which is frequently cited as a model for modern critical editions of Franco-Italian works. The editorial norms established by Holtus were taken up subsequently by Beretta, De Ninni and Morgan; I refer to the editorial guidelines in these texts to help address the idiosyncrasies of the Padua <em>Huon</em> manuscript. In any case, it should be kept in mind that because of the nature of Franco-Italian texts, a general system of editorial norms is impossible and each critical edition must establish variant norms to address linguistic characteristics specific to the manuscript under examination. Furthermore, the guidelines discussed by the École des chartes in its publication <em>Conseils pour l'édition des textes médiévaux</em>, and other frequently cited rubrics for the textual emendation of medieval texts, are in many ways unable to account for the mixed linguistic idiom of Franco-Italian.</p>
--->
+
 
 <!-- hyperlink here to: Alfred Foulet and Mary Blakely Speer, On Editing Old French Texts (Lawrence, KS: The Regents Press of Kansas, 1979; Mario Roque, "Régles pratiques pour l'édition des anciens textes français et provençaux," in Bibliothèque de l'école des chartes 87 (1926): 453-59; Cite other guides. -->
 
-<!--
+
 
         <p>In my edition of the Padua <em>Huon d'Auvergne</em>, any deviation from the scribe's text is indicated in footnotes, and it is always possible to retrace the manuscript's original reading. I only emend the text when scribal error impedes readability or when lines are omitted (v. 1063 (=1060); v. 1268 (=1267); v. 1494 (=1493)). I indicate in footnotes other editors' solutions to difficult readings and passages that I interpret differently. I indicate once all variant editorial norms used by previous editors (eg. Holtus uses an accent grave on <em>nì</em>, whereas I do not). Finally, footnotes include all other non-textual codicological features that may be of interest to scholars, including catchwords, spaces left for illuminations, tears, and rubrication. In future iterations of this digital edition, codicological information will be accessible in interactive form using high-resolution scans of all four extant Franco-Italian witnesses (B, T, P, Br).</p>
 
@@ -61,7 +59,7 @@
                   <td>ch<em>e</em> (v. 2119)</td></tr>
               <tr>
                   <td>chr</td>
-                  <td>ch<em>avalie</em>r (v. 271); this abbreviation is most frequent variant, occuring 15 times.</td></tr>
+                  <td>ch<em>avalie</em>r (v. 271); this abbreviation is most frequent variant, occurring 15 times.</td></tr>
               <tr>
                   <td>chri</td>
                   <td>ch<em>avalier</em>i (v. 354)</td>
@@ -80,7 +78,7 @@
               </tr>
               <tr>
                   <td>iehu; ihu</td>
-                  <td>Je<em>x</em>u, J<em>ex</em>hu; J<em>ex</em>h<em>n</em> the form Jexhu occurs four times, with the variant Jexhun / Jexhum occuring twice. I resolve all instances of the abbreviation iehu / ihu as Jexhu.</td>
+                  <td>Je<em>x</em>u, J<em>ex</em>hu; J<em>ex</em>h<em>n</em> the form Jexhu occurs four times, with the variant Jexhun / Jexhum occurring twice. I resolve all instances of the abbreviation iehu / ihu as Jexhu.</td>
               </tr>
               <tr>
                   <td>ml with strike through l</td>
@@ -137,7 +135,7 @@
                   <td>s<em>an</em>c<em>t</em>a (v. 3993); s<em>an</em>c<em>t</em>e (v. 5232)</td>
               </tr>
               <tr>
-                  <td>spo with ondulating titulus</td>
+                  <td>spo with undulating titulus</td>
                   <td>sp<em>irit</em>o</td>
               </tr>
               <tr>
@@ -168,9 +166,9 @@
                   <td>xpiente</td>
                   <td><em>Crist</em>ienté (v. 1248); <em>Crist</em>ienttade (v. 5366)</td>
 
--->
+
 <!-- if xpi is the abbreviation for christ, then the i before enttade is disappears in the resolution? -->
-<!--
+
               </tr>
         </table>
         </div>
@@ -179,30 +177,27 @@
 
         <h2 class="praxis">&#10081; 4. Diacritical Signs</h2>
 
-        <p>Following the praxis established by Holtus in his edition of <em>Aliscans</em>, I use the accute (<em>é</em>), grave (<em>è</em>), and umlaut (<em>ë</em>) accents to aid the reader in differentiating verb tense and homophones. The cedilla (<em>ç</em>) is a characteristic grapheme in Franco-Italian texts, and it is the only diacritical mark the scribe employs. For each example below, I provide the first occurance in the manuscript, noting other occurances of particular linguistic interest.</p>
+        <p>Following the praxis established by Holtus in his edition of <em>Aliscans</em>, I use the acute (<em>é</em>), grave (<em>è</em>), and umlaut (<em>ë</em>) accents to aid the reader in differentiating verb tense and homophones. The cedilla (<em>ç</em>) is a characteristic grapheme in Franco-Italian texts, and it is the only diacritical mark the scribe employs. For each example below, I provide the first occurrence in the manuscript, noting other occurrences of particular linguistic interest.</p>
 
--->
+
 
 <!-- Include reference to ç in Franco-Italian texts -->
 
-<!--
         <h3 class="praxis">4.1 Cedilla</h3>
 
         <p class="subsection">As in modern usage, the cedilla (<em>ç</em>) represents the dental [s] before the vowels a, o, and u (<em>perçò</em> v. 1). The scribe often forgets to add the cedilla or adds it when it is not necessary (<em>çasçun</em>, v. 3962); I do not correct these errors and instead add a footnote when it may confuse the reader.</p>
--->
 
 <!-- Are you sure this is the case? See Rosellini re ç usage, Rosellini, Aldo. Il cosiddetto franco‑veneto: Retrospettive e prospettive. Filologia moderna 2 (1977): 219‑303; 4 (1980): 221‑61 -->
 
-<!--
         <h3 class="praxis">4.2 Acute Accent</h3>
 
-        <p class="subsection">When possible, the accute accent (<em>é</em>) follows modern usage. The accute accent occurs only on the vowel <em>e</em> to indicate:</p>
+        <p class="subsection">When possible, the acute accent (<em>é</em>) follows modern usage. The acute accent occurs only on the vowel <em>e</em> to indicate:</p>
 
         <ol class="praxis">
 
             <li class="praxis">A past participle of the Old French first conjugation -ER. These forms occur in rhymed position: intré (v. 409); twice they occur within a line: <em>à caçé</em> (v. 2069); <em>è Sanguin andé</em> (v. 1018).</li>
 
-            <li class="praxis">The second person plural indicative of the first conjugation -ARE: <em>vui parlé</em>(v. 363); the second person plural imperative of the first congugation -ARE: <em>ascholté</em> (v. 19); <em>lasé</em>(v. 33); and the imperative form of some irregular verbs: ESSERE <em>sié</em> (v. 441), sé (v. 1706)(note apocopated form <em>si'</em>, v. 439), DIRE <em>dissé</em> (v. 1192), ANDARE <em>andé</em> (v. 32), FARE <em>fé</em> (v. 31). The meanings and forms of <em>fé</em> are problematic and overdermined in our text; in addition to the imperative form above, note for example the second person plural subjunctive variant <em>fé</em> (v. 39) (see § 3.2.3 and 3.3.3 below),--><!-- ask #LZM if she interprets this is as subjunctive as well; make sure references to sections are accurate. --> <!-- the second person singular <em>fé</em> (v. 3744), --><!-- French form? --><!-- the third person singular preterit form <em>fè</em> (see § 3.3.2 ), and the noun <em>fé</em> ("faith," see § 3.2.4).</li>
+            <li class="praxis">The second person plural indicative of the first conjugation -ARE: <em>vui parlé</em>(v. 363); the second person plural imperative of the first conjugation -ARE: <em>ascholté</em> (v. 19); <em>lasé</em>(v. 33); and the imperative form of some irregular verbs: ESSERE <em>sié</em> (v. 441), sé (v. 1706)(note apocopated form <em>si'</em>, v. 439), DIRE <em>dissé</em> (v. 1192), ANDARE <em>andé</em> (v. 32), FARE <em>fé</em> (v. 31). The meanings and forms of <em>fé</em> are problematic and overdetermined in our text; in addition to the imperative form above, note for example the second person plural subjunctive variant <em>fé</em> (v. 39) (see § 3.2.3 and 3.3.3 below),--><!-- ask #LZM if she interprets this is as subjunctive as well; make sure references to sections are accurate. --> <!-- the second person singular <em>fé</em> (v. 3744), --><!-- French form? --><!-- the third person singular preterit form <em>fè</em> (see § 3.3.2 ), and the noun <em>fé</em> ("faith," see § 3.2.4).</li>
 
             <li class="praxis">Future formes ending in <em>é</em>, which derive from the French future ending: faré (v. 60), seré (v. 62), vigniré (v. 83), averé (v. 761), poré (v. 2958), saveré (v. 2962).</li>
 
@@ -211,7 +206,7 @@
             <li class="praxis">Oxytone nouns and conjunctions: <em>pié</em> (v. 84); <em>merçé</em> (v. 438); <em>perché</em> (v. 426). Also, for frequent monosyllabic nouns: <em>fé</em> (v. 197), <em>pré</em> (417); <em>mé</em> (443).</li>
 
             <li class="praxis">On the adverb <em>asé</em> (545), <em>assé</em> (1516), derived from the Old French <em>asez</em>. --><!-- cite Tobler-Lommatch here --><!-- On the adverb <em>né</em> (2008, 2022). On the adverb <em>drié</em> (v. 175) and its derivative forms <em>dadrié</em> (v. 946) and <em>indrié</em> (v. 527). --><!-- footnote: Morgan, in her edition of the Padua Hell scene, does not accent these adverbs --></li>
-<!--
+
             <li class="praxis">The acute accent is added on oxytone third person preterit forms. However, on stem accented preterit and past participle forms, no accent is used: <em>poté</em> (v. 272); <em>abaté</em> (v. 709), <em>abatté</em> (v. 910), but <em>abatà</em> (v. 2312); <em>nassé</em> (903). As is often the case with medieval texts, the present and the past tenses frequently alternate. For this reason, forms that alternate tense with only an accent are problematic: <em>abate</em> (v. 513) vs. <em>abaté</em> (v. 709). In passages such as these I interpret from context and note variant interpretations.</li>
 
         </ol>
@@ -235,7 +230,7 @@
             <li class="praxis">Preterit forms of regular verbs: <em>menà</em> (v. 47); <em>oldì</em> (v. 225); etc.</li>
 
             <li class="praxis">Past participles derived from the Italian first conjugation -ARE: <em>andà</em> (v. 821); <em>voltà</em> (v. 661); <em>domandà</em> (v. 1695). --><!-- find other examples -->
-<!--
+
             <li class="praxis">Certain irregular past forms: ensì (v. 51), inssì (184); andè (v. 52); ; inssì (>USCIRE, l. 184; 3468); abatù (980 IRREGULAR?); oldì (1687)(irregular? see #4); avè (2186); bevu? (5522); venù (5557)(if truncated Italianate forms, bevù and venù; if French, bevu and venu; see second to last laisse).</li>
 
             <li class="praxis">Certain irregular past participles: andè (v. 52) ensì (> USCIRE (give Latin etymon?), v. 51); inssì (>USCIRE, l. 184; 3468); abatù (980 IRREGULAR?); oldì (1687)(irregular? see #4); avè (2186); bevu? (5522); venù (5557)(if truncated Italianate forms, bevù and venù; if French, bevu and venu; see second to last laisse).</li>
@@ -270,15 +265,12 @@
             </ol>
         </div>
 
-        <p>Given the irregularity of many passages within the text, I limit myself to these four categories established by Holtus in editing Franco-Italian texts. The nature of Franco-Italian calls for an alternate approach to emendation. In this text, the most often occurring errors are 1. a missing titulus (which accounts for …% of errors); a missing tonic vowel, usually e or o (…); and… </p>
--->
-<!--
+        <!-- <p>Given the irregularity of many passages within the text, I limit myself to these four categories established by Holtus in editing Franco-Italian texts. The nature of Franco-Italian calls for an alternate approach to emendation. In this text, the most often occurring errors are 1. a missing titulus (which accounts for …% of errors); a missing tonic vowel, usually e or o (…); and… </p>
 
         <h2 class="praxis">&#10081; 5. Language of Scribe</h2>
 
-        <h2 class="praxis">&#10081; 6. Specific Considerations & Difficulties</h2>
+        <h2 class="praxis">&#10081; 6. Specific Considerations & Difficulties</h2> -->
 
-        -->
 </div>
 </body>
 
